<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_signin"
            android:icon="@drawable/ic_menu_signin"
            android:title="@string/signin" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_menu_review"
            android:title="Write a review" />

        <item
            android:id="@+id/nav_suggest"
            android:icon="@drawable/ic_menu_add"
            android:title="Suggest a restaurant" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_contact"
                android:title="@string/contact_us" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/action_settings" />


        </menu>
    </item>

</menu>
